[gd_scene format=3 uid="uid://cpnv3okvg501i"]

[ext_resource type="Script" uid="uid://dj2kbgo7kvdxt" path="res://scripts/player.gd" id="1_pfgo0"]
[ext_resource type="Texture2D" uid="uid://0d5ej02h6kx" path="res://Assets/TristanGhost.png" id="1_w2ac3"]

[sub_resource type="Animation" id="Animation_pfgo0"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_c6fue"]
resource_name = "player_walk_down"
length = 0.06666667
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 3, -0.18, 0, 0.15333334, 0, 1, -0.33333334, 0, 0, 0),
"times": PackedFloat32Array(0, 1.08, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lilb6"]
_data = {
&"RESET": SubResource("Animation_pfgo0"),
&"player_walk_down": SubResource("Animation_c6fue")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m3xmp"]
radius = 182.0
height = 422.0

[sub_resource type="AtlasTexture" id="AtlasTexture_pfgo0"]
atlas = ExtResource("1_w2ac3")
region = Rect2(0, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6fue"]
atlas = ExtResource("1_w2ac3")
region = Rect2(640, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_lilb6"]
atlas = ExtResource("1_w2ac3")
region = Rect2(1280, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3xmp"]
atlas = ExtResource("1_w2ac3")
region = Rect2(0, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx4k2"]
atlas = ExtResource("1_w2ac3")
region = Rect2(640, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_005ny"]
atlas = ExtResource("1_w2ac3")
region = Rect2(1280, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aoec"]
atlas = ExtResource("1_w2ac3")
region = Rect2(0, 1280, 640, 640)

[sub_resource type="SpriteFrames" id="SpriteFrames_a7mne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfgo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6fue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lilb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3xmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx4k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_005ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aoec")
}],
"loop": true,
"name": &"idle_animation",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation_1",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpjcp"]
radius = 532.0085

[node name="Noahscene" type="Node2D" unique_id=278388439]

[node name="Player" type="CharacterBody2D" parent="." unique_id=1899756301]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_pfgo0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player" unique_id=1344142712]
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_lilb6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" unique_id=1978857132]
shape = SubResource("CapsuleShape2D_m3xmp")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Player" unique_id=2140642072]
sprite_frames = SubResource("SpriteFrames_a7mne")
animation = &"idle_animation"
autoplay = "idle_animation"
frame = 1

[node name="Camera2D" type="Camera2D" parent="Player" unique_id=474702789]
zoom = Vector2(5, 5)

[node name="DetectionArea" type="Area2D" parent="Player" unique_id=474995508]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/DetectionArea" unique_id=988571941]
shape = SubResource("CircleShape2D_kpjcp")

[connection signal="body_entered" from="Player/DetectionArea" to="Player" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Player/DetectionArea" to="Player" method="_on_detection_area_body_exited"]
